--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "chai": "^4.1.2",
+    "chromedriver": "^2.38.3",
     "mocha": "^5.1.1",
     "selenium-webdriver": "^4.0.0-alpha.1"
   }
